<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uoft.journey.ui.activity.MeasureActivity">

    <TextView
        android:id="@+id/text_new_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_title"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="start"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textColorHeading"
        />

    <RelativeLayout
        android:id="@+id/layout_timed"
        android:layout_below="@id/text_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/colorDivider"
        android:layout_marginBottom="5dp">

        <CheckBox
            android:id="@+id/check_timed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timed_assessment"
            android:layout_centerVertical="true"/>

        <Spinner
            android:id="@+id/spin_time"
            android:layout_toLeftOf="@+id/check_timed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/timed_intervals"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
             />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_instructions"
        android:layout_below="@+id/layout_timed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/instructions"
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        />

    <Button
        android:id="@+id/button_start"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/start"
        android:background="@drawable/round_button"
        android:textColor="@color/textColorPrimary"
        android:layout_centerInParent="true"
        android:layout_below="@+id/text_instructions"
        />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="@color/textColorPrimary"
        android:text="@string/stop"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/text_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/text_walk_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_walking"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text_countdown"/>

    <ImageView
        android:id="@+id/image_walk"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/walk"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/pb_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_processing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pb_spinner"
        android:layout_centerHorizontal="true"
        android:text="@string/processing"
        android:visibility="invisible"/>

    <TableLayout
        android:id="@+id/layout_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:stretchColumns="0">

        <TableRow>
            <TextView
                android:id="@+id/text_output_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/duration"
                />
            <TextView
                android:id="@+id/text_output_1_val"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorPrimary"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="3dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/text_output_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/number_steps"
                />
            <TextView
                android:id="@+id/text_output_2_val"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorPrimary"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:gravity="center"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/text_output_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/average_time"
                />
            <TextView
                android:id="@+id/text_output_3_val"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorPrimary"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:gravity="center"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/text_output_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/standard_dev"
                />
            <TextView
                android:id="@+id/text_output_4_val"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorPrimary"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:gravity="center"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/text_output_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/variation"
                />
            <TextView
                android:id="@+id/text_output_5_val"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorPrimary"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:gravity="center"
                />
        </TableRow>

    </TableLayout>

</RelativeLayout>
