<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uoft.journey.ui.activity.AssessmentDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"

                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/text_detail_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:gravity="center"
                                />

                            <LinearLayout
                                android:id="@+id/detail_top_row"
                                android:layout_below="@+id/text_detail_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                >



                                <RelativeLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <TextView
                                        android:id="@+id/text_detail_2_val"
                                        android:layout_width="wrap_content"
                                        android:layout_height="75dp"
                                        android:gravity="center"
                                        android:layout_centerHorizontal="true"
                                        android:textAppearance="?android:attr/textAppearanceLarge"
                                        android:textSize="32sp"
                                        android:layout_marginBottom="5dp"/>

                                    <TextView
                                        android:id="@+id/text_detail_2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/step_count"
                                        android:layout_below="@+id/text_detail_2_val"
                                        android:layout_centerHorizontal="true"/>

                                </RelativeLayout>

                                <RelativeLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <TextView
                                        android:id="@+id/text_detail_5_val"
                                        android:layout_width="wrap_content"
                                        android:layout_height="75dp"
                                        android:gravity="center"
                                        android:layout_centerHorizontal="true"
                                        android:textAppearance="?android:attr/textAppearanceLarge"
                                        android:textSize="32sp"
                                        android:layout_marginBottom="5dp"/>

                                    <TextView
                                        android:id="@+id/text_detail_5"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="SYMMETRY"
                                        android:layout_below="@+id/text_detail_5_val"
                                        android:layout_centerHorizontal="true"/>

                                </RelativeLayout>

                            </LinearLayout>

                            <LinearLayout android:id="@+id/detail_middle_row"
                                          android:layout_below="@+id/detail_top_row"
                                          android:orientation="horizontal"
                                          android:layout_marginTop="5dp"
                                          android:layout_width="match_parent"
                                          android:layout_height="wrap_content">

                                <RelativeLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <TextView
                                        android:id="@+id/text_detail_6_val"
                                        android:layout_width="wrap_content"
                                        android:layout_height="75dp"
                                        android:gravity="center"
                                        android:layout_centerHorizontal="true"
                                        android:textAppearance="?android:attr/textAppearanceLarge"
                                        android:textSize="32sp"
                                        android:layout_marginBottom="5dp"/>

                                    <TextView
                                        android:id="@+id/text_detail_6"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/average_stride_time"
                                        android:layout_below="@+id/text_detail_6_val"
                                        android:layout_centerHorizontal="true"/>

                                </RelativeLayout>

                                <RelativeLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <TextView
                                        android:id="@+id/text_detail_7_val"
                                        android:layout_width="75dp"
                                        android:layout_height="75dp"
                                        android:gravity="center"
                                        android:layout_centerHorizontal="true"
                                        android:textAppearance="?android:attr/textAppearanceLarge"
                                        android:textSize="32sp"
                                        android:layout_marginBottom="5dp"/>

                                    <TextView
                                        android:id="@+id/text_detail_7"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/stv"
                                        android:layout_below="@+id/text_detail_7_val"
                                        android:layout_centerHorizontal="true"/>

                                </RelativeLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/detail_bottom_row"
                                android:layout_below="@+id/detail_middle_row"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp">

                                <RelativeLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <TextView
                                        android:id="@+id/text_detail_3_val"
                                        android:layout_width="wrap_content"
                                        android:layout_height="75dp"
                                        android:gravity="center"
                                        android:layout_centerHorizontal="true"
                                        android:textAppearance="?android:attr/textAppearanceLarge"
                                        android:textSize="32sp"
                                        android:layout_marginBottom="5dp"/>

                                    <TextView
                                        android:id="@+id/text_detail_3"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/average_step_time"
                                        android:layout_below="@+id/text_detail_3_val"
                                        android:layout_centerHorizontal="true"/>

                                </RelativeLayout>

                                <RelativeLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <TextView
                                        android:id="@+id/text_detail_4_val"
                                        android:textColor="@color/colorWhiteTranslucent"
                                        android:layout_width="75dp"
                                        android:layout_height="75dp"
                                        android:gravity="center"
                                        android:layout_centerHorizontal="true"
                                        android:textAppearance="?android:attr/textAppearanceLarge"
                                        android:textSize="32sp"
                                        android:layout_marginBottom="5dp"/>

                                    <TextView
                                        android:id="@+id/text_detail_4"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/stv"
                                        android:layout_below="@+id/text_detail_4_val"
                                        android:layout_centerHorizontal="true"/>

                                </RelativeLayout>

                            </LinearLayout>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_bottom"
                        android:layout_below="@+id/card_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        >

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/detail_graph"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_below="@+id/detail_bottom_row"
                            android:layout_marginTop="20dp"
                            />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_below="@+id/card_bottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        >

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/step_time_graph"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="20dp"
                            />

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
